--- a/src/App.css
+++ b/src/App.css
@@ -16,14 +16,59 @@
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+  max-width: 100%;
+  height: 40px;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+
+a {
+  text-decoration: none;
+  font-size: 14px;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+p {
+  font-size: 14px;
+  margin: auto;
 }
+
+button {
+  padding: 12px 10px;
+  font-size: 14px;
+  background-color: var(--primary1);
+  color: white;
+}
+
+/* Header starts here */
+.header-top-strip {
+  background: var(--lighter2);
+}
+
+.input-group button {
+  background: transparent;
+  font-size: 14px;
+  color: var(--darker);
+}
+
+.header-upper {
+  background: var(--lighter2);
+}
+
+.nav-links a {
+  font-size: 16px;
+  text-transform: uppercase;
+  color: var(--primary1);
+}
+
+.nav-links-nav a {
+  color: var(--darker);
+}
+/* Header ends here */
+
+/* Footer starts here */
+footer {
+  background-color: var(--lighter2);
+}
+
+.social-icons a {
+  color: var(--darker);
+}
+/* Footer ends here */
