--- a/src/App.css
+++ b/src/App.css
@@ -37,9 +37,39 @@ button {
   color: white;
 }
 
+.button-link {
+  padding: 12px 10px;
+  font-size: 18px;
+  border-radius: 10px;
+  color: white;
+  background-color: var(--primary1);
+  transition: 0.4s ease;
+  border: 1px solid transparent;
+}
+
+.button-link:hover {
+  background-color: transparent;
+  border: 1px solid var(--primary1);
+  color: var(--primary1);
+}
+
+.active {
+  font-weight: 600;
+  color: var(--primary);
+}
+
+.inactive {
+  color: var(--primary1);
+  font-weight: 400;
+}
+
 /* Header starts here */
 .header-top-strip {
-  background: var(--lighter2);
+  background: var(--lighter);
+}
+
+.header-top-strip a {
+  color: var(--primary1);
 }
 
 .input-group button {
@@ -55,12 +85,9 @@ button {
 .nav-links a {
   font-size: 16px;
   text-transform: uppercase;
-  color: var(--primary1);
+  text-decoration: none;
 }
 
-.nav-links-nav a {
-  color: var(--darker);
-}
 /* Header ends here */
 
 /* Footer starts here */
@@ -71,4 +98,47 @@ footer {
 .social-icons a {
   color: var(--darker);
 }
+
+.pay img {
+  transition: 0.5s ease;
+  border-radius: 20px;
+}
+
+.pay img:hover {
+  transform: translateY(-10px);
+}
+
+.footer-details a {
+  color: var(--primary1);
+}
 /* Footer ends here */
+
+/* Home begins */
+.banner-details {
+  background: url(./assets/images/back.jpg);
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 60vh;
+}
+
+.hero-details img {
+  width: 100%;
+  height: 80px;
+}
+
+.banner-details span {
+  color: var(--primary2);
+}
+h1 {
+  font-weight: 600;
+  color: var(--search);
+  font-size: 40px;
+}
+
+h2 {
+  font-weight: 400;
+  color: var(--primary1);
+  font-size: 32px;
+}
+/* Home ends */
